# poetry-monorepo

./: .flake8  .gitignore  README.md  monorepo-demo.code-workspace
apps/api/: pyproject.toml
apps/api/api/: main.py
apps/api/scripts/: dev.sh
apps/api/tests/: test_main.py
libs/core/: README.md  pyproject.toml
libs/core/core/: __init__.py  logging.py
libs/core/tests/: test_core.py
libs/devel/: README.md  pyproject.toml
tools/monokit/: pyproject.toml
