[tool.poetry]
name = "core"
version = "0.1.0"
description = "core module"
authors = ["ndilsou <nasoungadoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.1.0"

[tool.poetry.dev-dependencies]
devel = {path = "../devel", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
